# GoldenV

./: .gitignore  README.md  goldenv.spec  pip.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-windows.yml  ci.yml
assets/fonts/: .gitkeep  README.txt
configs/: station.yaml
configs/scale_protocols/: and_fz_csv.yaml  ascii_line_kg.yaml  delimiter_stx_etx.yaml  fixed_12byte_stx_etx.yaml  hikrobot_12byte.yaml  mettler_toledo_sics.yaml
goldenv/: __init__.py  app.py  config.py  config_io.py  paths.py  storage.py
goldenv/cameras/: base.py  dahua.py  dahua_sdk_loader.py  factory.py  simulated.py  usb_opencv.py
goldenv/runtime/: dahua_bootstrap.py
goldenv/scales/: base.py  debug_bus.py  factory.py  frame_buffer.py  protocol_registry.py  serial_scale.py
goldenv/scales/parsers/: __init__.py  types.py
goldenv/services/: record_service.py  scale_service.py  vision_service.py
goldenv/ui/: calibration_wizard.py  first_run.py  main_window.py  scale_debug_panel.py  settings_dialog.py  strings.py
goldenv/vision/: inner_diameter.py  measurement_base.py  overlay.py
packaging/: goldenv.spec  install_dahua_runtime.ps1  installer.iss  runtime_hook_dahua.py
packaging/redist/: .gitkeep
scripts/: build_linux.sh  build_win.ps1  fetch_dahua_sdk.ps1  fetch_dahua_sdk.sh  fetch_win_build.py  generate_user_manual.py  remote_build_config.example.yaml  remote_build_linux.sh  setup_dev.sh  smoke_test_win.ps1
tests/: test_config_io.py  test_dahua_bootstrap.py  test_fixed_length_parser.py  test_inner_diameter.py
(+3 files in other folders)
