[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goldenv"
version = "0.1.0"
description = "黄金镯子内径视觉检测与电子秤对接系统"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    "pyserial>=3.5",
]

[project.scripts]
goldenv = "goldenv.app:main"

[tool.setuptools.packages.find]
include = ["goldenv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
